--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,8 @@ layout: default
   </header>
 
   <section class="post">
-    {% markdown pages/about.md %}
+    {% capture about %}{% include pages/about.md %}{% endcapture %}
+    {{ about  | markdownify }}
     <br>
     <h3>Team</h3>
     <hr class="panel-cover__divider">
@@ -27,6 +28,7 @@ layout: default
             <li class="navigation__item team">
               <a href="http://twitter.com/{{ member.twitter }}" title="@{{ member.twitter }} on Twitter" target="_blank">
                 <i class="icon icon-social-twitter"></i>
+                <span class="label">Twitter</span>
               </a>
             </li>
           {% endif %}
@@ -36,6 +38,7 @@ layout: default
             <li class="navigation__item team">
               <a href="http://fb.me/{{ member.facebook }}" title="{{ member.facebook }} on Facebook" target="_blank">
                 <i class="icon icon-social-facebook"></i>
+                <span class="label">Facebook</span>
               </a>
             </li>
           {% endif %}
@@ -45,6 +48,7 @@ layout: default
             <li class="navigation__item team">
               <a href="https://www.linkedin.com/in/{{ member.linkedin }}" title="{{ member.linkedin }} on LinkedIn" target="_blank">
                 <i class="icon icon-social-linkedin"></i>
+                <span class="label">LinkedIn</span>
               </a>
             </li>
           {% endif %}
@@ -54,6 +58,7 @@ layout: default
             <li class="navigation__item team">
               <a href="https://www.github.com/{{ member.github }}" title="{{ member.github }} on GitHub" target="_blank">
                 <i class="icon icon-social-github"></i>
+                <span class="label">GitHub</span>
               </a>
             </li>
           {% endif %}
@@ -63,6 +68,7 @@ layout: default
             <li class="navigation__item team">
               <a href="mailto:{{ member.email }}" title="Email {{ member.email }}" target="_blank">
                 <i class="icon icon-mail"></i>
+                <span class="label">Mail</span>
               </a>
             </li>
           {% endif %}
