--- a/_includes/img.html
+++ b/_includes/img.html
@@ -1,3 +1,2 @@
-<div class="image-wrapper">
-    <img src="{{ include.url }}" alt="{{ include.desc }}" />
-</div>
+{% capture src %}{{site.baseurl}}{{include.src}}{% endcapture %}
+<img src="{{ src }}" alt="{{ include.alt }}" width="100%"/>
