Added social share

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <span class="mobile btn-mobile-menu">
-  <i class="icon icon-list btn-mobile-menu__icon"></i>
-  <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
+  <i class="fi fi-list btn-mobile-menu__icon"></i>
+  <i class="fi fi-x-circle btn-mobile-close__icon hidden"></i>
 </span>
   
 <header class="panel-cover" style="background-image: url({{ "images/cover.png" | prepend: site.baseurl }})">
@@ -37,7 +37,7 @@
               <!-- Twitter -->
               <li class="navigation__item">
                 <a href="http://twitter.com/{{ site.author.twitter_username }}" title="@{{ site.author.twitter_username }} on Twitter" target="_blank">
-                  <i class="icon icon-social-twitter"></i>
+                  <i class="fi fi-social-twitter"></i>
                   <span class="label">Twitter</span>
                 </a>
               </li>
@@ -47,7 +47,7 @@
               <!-- Facebook -->
               <li class="navigation__item">
                 <a href="http://fb.me/{{ site.author.facebook_username }}" title="{{ site.author.facebook_username }} on Facebook" target="_blank">
-                  <i class="icon icon-social-facebook"></i>
+                  <i class="fi fi-social-facebook"></i>
                   <span class="label">Facebook</span>
                 </a>
               </li>
@@ -57,7 +57,7 @@
               <!-- LinkedIn -->
               <li class="navigation__item">
                 <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
-                  <i class="icon icon-social-linkedin"></i>
+                  <i class="fi fi-social-linkedin"></i>
                   <span class="label">LinkedIn</span>
                 </a>
               </li>
@@ -67,7 +67,7 @@
               <!-- GitHub -->
               <li class="navigation__item">
                 <a href="https://www.github.com/{{ site.author.github_username }}" title="{{ site.author.github_username }} on GitHub" target="_blank">
-                  <i class="icon icon-social-github"></i>
+                  <i class="fi fi-social-github"></i>
                   <span class="label">GitHub</span>
                 </a>
               </li>
@@ -77,7 +77,7 @@
               <!-- Email -->
               <li class="navigation__item">
                 <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
-                  <i class="icon icon-mail"></i>
+                  <i class="fi fi-mail"></i>
                   <span class="label">Email</span>
                 </a>
               </li>
@@ -86,7 +86,7 @@
             <!-- RSS -->
             <li class="navigation__item">
               <a href="{{ "feed.xml" | prepend: site.baseurl }}" title="Subscribe" target="_blank">
-                <i class="icon icon-rss"></i>
+                <i class="fi fi-rss"></i>
                 <span class="label">RSS</span>
               </a>
             </li>
