--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -27,7 +27,7 @@ layout: default
             <!-- Twitter -->
             <li class="navigation__item team">
               <a href="http://twitter.com/{{ member.twitter }}" title="@{{ member.twitter }} on Twitter" target="_blank">
-                <i class="icon icon-social-twitter"></i>
+                <i class="fi fi-social-twitter"></i>
                 <span class="label">Twitter</span>
               </a>
             </li>
@@ -37,7 +37,7 @@ layout: default
             <!-- Facebook -->
             <li class="navigation__item team">
               <a href="http://fb.me/{{ member.facebook }}" title="{{ member.facebook }} on Facebook" target="_blank">
-                <i class="icon icon-social-facebook"></i>
+                <i class="fi fi-social-facebook"></i>
                 <span class="label">Facebook</span>
               </a>
             </li>
@@ -47,7 +47,7 @@ layout: default
             <!-- LinkedIn -->
             <li class="navigation__item team">
               <a href="https://www.linkedin.com/in/{{ member.linkedin }}" title="{{ member.linkedin }} on LinkedIn" target="_blank">
-                <i class="icon icon-social-linkedin"></i>
+                <i class="fi fi-social-linkedin"></i>
                 <span class="label">LinkedIn</span>
               </a>
             </li>
@@ -57,7 +57,7 @@ layout: default
             <!-- GitHub -->
             <li class="navigation__item team">
               <a href="https://www.github.com/{{ member.github }}" title="{{ member.github }} on GitHub" target="_blank">
-                <i class="icon icon-social-github"></i>
+                <i class="fi fi-social-github"></i>
                 <span class="label">GitHub</span>
               </a>
             </li>
@@ -67,7 +67,7 @@ layout: default
             <!-- Email -->
             <li class="navigation__item team">
               <a href="mailto:{{ member.email }}" title="Email {{ member.email }}" target="_blank">
-                <i class="icon icon-mail"></i>
+                <i class="fi fi-mail"></i>
                 <span class="label">Mail</span>
               </a>
             </li>
