--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,9 @@ layout: default
   <section class="post">
     {{ content }}
   </section>
+
+  {% include post-share.html post=page %}
+
   {% if page.comments != false and site.disqus_shortname %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
 </article>
 {% if page.comments != false %}{% include disqus.html %}{% endif %}
