Created PressKit ( english & spanish)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,13 @@
             </ul>
           </nav>
 
+
+          <nav class="cover-navigation cover-navigation--primary">
+            <ul class="navigation">
+              <li class="navigation__item"><a href="{{ site.baseurl }}press" title="link to {{ site.title }} press" class="blog-button">Press</a></li>
+            </ul>
+          </nav>
+
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
           
