--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ layout: default
 
 <article class="post-container post-container--single">
   <header class="post-header">
-    <h2 class="post-title">About</h2>
+    <h2 class="post-title">About Us</h2>
   </header>
 
   <section class="post">
