--- a/css/uno.css
+++ b/css/uno.css
@@ -73,8 +73,8 @@ html {
 	max-height: 100%; }
 
 body {
-	font-family: ObtiSans, sans-serif;
-	font-size: 2em;
+	font-family: "Raleway", sans-serif;
+	font-size: 1em;
 	color: #FFF; 
 	background-color: #1a1a1a;
 }
