--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -67,7 +67,7 @@ h6 {
     font-weight: 700;
 }
 
-h1, h2 {
+.title {
     margin-top: .8em;
 	margin-bottom: .4em;
 	font-family: ImFellFrenchCannon, {{ site.data.template.font.primary }};
@@ -195,7 +195,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+	font-family: ImFellFrenchCannon, {{ site.data.template.font.primary }};
     color: #{{ site.data.template.color.primary }};
 }
 
