--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+            <a class="navbar-brand page-scroll title" href="#page-top">{{site.title}}</a>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
