--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                         <a class="nav-link page-scroll" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#news">News</a>
+                        <a class="nav-link page-scroll" href="#posts">News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#about">About</a>
@@ -37,7 +37,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="cover">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">Game Dev Solutions</div>
@@ -47,8 +47,7 @@
         </div>
     </header>
 <!--
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
+    {% for page in site.pages %}
+        {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
+    {% endfor %}
  -->
-
