--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -22,7 +22,7 @@
                             </div>
 
                             <div class="col-md-5 {% if mod == 0 %}pull-md-7{% endif %}">
-                                <h5>{{ post.project-date }}</h5>
+                                <h5>{{ post.display-date }}</h5>
                                 <p class="text-muted">{{ post.description }}</p>
                                 <p><a href="#posts_modal{{ post.modal-id }}">Read More...</a></p>
                             </div>
