Improved Layouts, added content and better style

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,27 +1,21 @@
 <!-- Clients Aside -->
-    <aside class="clients">
+    <section id="clients">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="/img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">We collaborate with</h2>
+                    <h3 class="section-subheading text-muted">Support, Development and Publishing</h3>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="/img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                
+                <div class="col-md-4 col-sm-4">
+                    <img src="/img/logos/frontwire.png" class="img-responsive img-centered" alt="">
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="/img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="col-md-4 col-sm-4">
+                    <img src="/img/logos/unrealengine.png" class="img-responsive img-centered" alt="">
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="/img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="col-md-4 col-sm-4">
+                    <img src="/img/logos/epicgames.png" class="img-responsive img-centered" alt="">
                 </div>
             </div>
         </div>
-    </aside>
+    </section>
