--- a/_includes/press/header.html
+++ b/_includes/press/header.html
@@ -1,10 +1,9 @@
 <!-- Header -->
-    <header class="cover">
+    <header class="cover press">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">{{site.title}}</div>
-                <div class="intro-lead-in">Dream, Make It Real</div>
-                <a href="#games" class="page-scroll btn"><i class="fa fa-3x fa-fw fa-angle-down"></i></a>
+                <a href="#team" class="page-scroll btn"><i class="fa fa-3x fa-fw fa-angle-down"></i></a>
             </div>
         </div>
     </header>
