--- a/_layouts/press.html
+++ b/_layouts/press.html
@@ -1,3 +1,8 @@
+---
+title: Press Kit
+permalink: /press/
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -6,11 +11,7 @@
   <body id="page-top" class="index">
 
     {% include navbar.html %}
-    {% include header.html %}
-    {% include games.html %}
-    <!-- Services -->
-    {% include clients.html %}
-    <!-- Posts -->
+    {% include press/header.html %}
     {% include team.html %}
     {% include contact.html %}
     {% include footer.html %}
