--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,10 +4,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row justify-content-md-center">
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -22,7 +21,6 @@
                                 </a>
                             </li>
                             {% endfor %}
-
                         </ul>
                     </div>
                 </div>
