Added Piperift logos to presskit

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,8 +41,8 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Grid Framework -->
-  <link rel="stylesheet" href="{{ "css/normalize.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "css/skeleton.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/skeleton.css">
 
   <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
