--- a/_layouts/presskit.html
+++ b/_layouts/presskit.html
@@ -6,12 +6,18 @@ layout: default
 
 <div class="lenguaje english">
 	<article id="company" class="post-container post-container--single">
-
-		<header class="post-header">
+	
+		<header class="post-header m-t-3">
 			<h2 class="post-title">Press Kit</h2>
 		</header>
 
-		<section class="post">
+		<div class="one-half column no-margin-left m-t-6">
+			<a href="/images/press/piperift-side.png" download="piperift-side">
+				<img src="/images/press/piperift-side.png" class="responsive">
+			</a>
+		</div>
+
+		<section class="post m-t-3">
 			<div class="description">
 				<h3>Description</h3>
 				<p><strong>Piperift</strong> is a spanish independent game studio were we strive to push the boundaries of game narrative in order to create new experiences that players have never seen before.</p>
@@ -77,6 +83,11 @@ layout: default
 				</div>
 
 				<div class="one-half column no-margin-left">
+					<a href="/images/press/piperift.png" download="piperift">
+						<img src="/images/press/piperift.png">
+					</a>
+				</div>
+				<div class="one-half column no-margin-left">
 					<a href="/images/press/Hall2.png" download="mrbrian_image1">
 						<img src="/images/press/Hall2.png">
 					</a>
@@ -120,11 +131,18 @@ layout: default
 
 <div class="lenguaje spanish">
 	<article class="post-container post-container--single">
-		<header class="post-header">
+			
+		<header class="post-header m-t-3">
 			<h2 class="post-title">Kit de Prensa</h2>
 		</header>
 
-		<section class="post">
+		<div class="one-half column no-margin-left m-t-6">
+			<a href="/images/press/piperift-side.png" download="piperift-side">
+				<img src="/images/press/piperift-side.png" class="responsive">
+			</a>
+		</div>
+
+		<section class="post m-t-3">
 			<div class="description">
 				<h3>Descripcion</h3>
 				<p><strong>Piperift</strong> es un estudio de videojuegos independiente español que se esfuerza por ampliar los limites de la narrativa para crear nuevas experiencias nunca vistas por los jugadores.</p>
@@ -189,6 +207,11 @@ layout: default
 					<h3>Imagenes</h3>
 				</div>
 
+				<div class="one-half column no-margin-left">
+					<a href="/images/press/piperift.png" download="piperift">
+						<img src="/images/press/piperift.png">
+					</a>
+				</div>
 				<div class="one-half column no-margin-left">
 					<a href="/images/press/Hall2.png" download="mrbrian_image1">
 						<img src="/images/press/Hall2.png">
