--- a/_layouts/presskit.html
+++ b/_layouts/presskit.html
@@ -11,11 +11,11 @@ layout: default
 			<h2 class="post-title">Press Kit</h2>
 		</header>
 
-		<div class="one-half column no-margin-left m-t-6">
+		<div class="row"><div class="column no-margin-left m-t-6">
 			<a href="/images/press/piperift-side.png" download="piperift-side">
 				<img src="/images/press/piperift-side.png" class="responsive">
 			</a>
-		</div>
+		</div></div>
 
 		<section class="post m-t-3">
 			<div class="description">
@@ -82,7 +82,7 @@ layout: default
 					<h3>Images</h3>
 				</div>
 
-				<div class="one-half column no-margin-left">
+				<div class="column no-margin-left">
 					<a href="/images/press/piperift.png" download="piperift">
 						<img src="/images/press/piperift.png">
 					</a>
@@ -136,11 +136,11 @@ layout: default
 			<h2 class="post-title">Kit de Prensa</h2>
 		</header>
 
-		<div class="one-half column no-margin-left m-t-6">
+		<div class="row"><div class="column no-margin-left m-t-6">
 			<a href="/images/press/piperift-side.png" download="piperift-side">
 				<img src="/images/press/piperift-side.png" class="responsive">
 			</a>
-		</div>
+		</div></div>
 
 		<section class="post m-t-3">
 			<div class="description">
@@ -207,7 +207,7 @@ layout: default
 					<h3>Imagenes</h3>
 				</div>
 
-				<div class="one-half column no-margin-left">
+				<div class="column no-margin-left">
 					<a href="/images/press/piperift.png" download="piperift">
 						<img src="/images/press/piperift.png">
 					</a>
