Fixed some links on the header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,13 +20,13 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
             </ul>
           </nav>
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}about" title="link to {{ site.title }} about" class="blog-button">About</a></li>
+              <li class="navigation__item"><a href="/about" title="link to {{ site.title }} about" class="blog-button">About</a></li>
             </ul>
           </nav>
 
