--- a/_includes/games.html
+++ b/_includes/games.html
@@ -1,4 +1,4 @@
-<!-- Services Section -->
+<!-- Games Section -->
     <section id="games">
         <div class="container">
             <div class="row">
@@ -8,13 +8,13 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                    <a href="/games/etereo">
+                    <a href="https://piperift.itch.io/etereo">
                         <h4 class="service-heading">Etereo</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/games/before-you-die">
+                    <a href="https://piperift.itch.io/before-you-die">
                         <h4 class="service-heading">Before You Die</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </a>
