--- a/_includes/press/header.html
+++ b/_includes/press/header.html
@@ -1,9 +1,12 @@
+
+{% include press/navbar.html %}
+
 <!-- Header -->
     <header class="cover press">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">{{site.title}}</div>
-                <a href="#team" class="page-scroll btn"><i class="fa fa-3x fa-fw fa-angle-down"></i></a>
+                <a href="#about" class="page-scroll btn"><i class="fa fa-3x fa-fw fa-angle-down"></i></a>
             </div>
         </div>
     </header>
