--- a/_includes/press/navbar.html
+++ b/_includes/press/navbar.html
@@ -6,25 +6,27 @@
         
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand page-scroll title" href="/#page-top">{{site.title}}</a>
+            <a class="navbar-brand page-scroll title" href="/">
+                {{site.title}}
+                <a class="navbar-brand page-scroll text-white ml-5" href="#page-top">
+                    Press Kit
+                </a>
+            </a>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="navbar-nav ml-auto justify-content-end">
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="/"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#games">Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#clients">Services</a>
-                    </li>
-                    <!--<li class="nav-item">
-                        <a class="nav-link page-scroll" href="#posts">News</a>
-                    </li>-->
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="/press">Press</a>
+                        <a class="nav-link page-scroll" href="#files">Files</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
