--- a/_layouts/press.html
+++ b/_layouts/press.html
@@ -10,11 +10,12 @@ permalink: /press/
 
   <body id="page-top" class="index">
 
-    {% include navbar.html %}
     {% include press/header.html %}
-    {% include team.html %}
+    {% include press/about.html %}
+    {% include press/games.html %}
     {% include contact.html %}
     {% include footer.html %}
+
     {% include modals.html %}
     {% include js.html %}
 
