Some Press changes

--- a/_layouts/press.html
+++ b/_layouts/press.html
@@ -13,6 +13,7 @@ permalink: /press/
     {% include press/header.html %}
     {% include press/about.html %}
     {% include press/games.html %}
+    {% include press/files.html %}
     {% include contact.html %}
     {% include footer.html %}
 
