--- a/_includes/press/about.html
+++ b/_includes/press/about.html
@@ -1,12 +1,16 @@
 
 <!-- About Section -->
-    <section id="about">
+    <section id="about" class="mt-5 pt-4 pb-4 bg-primary">
         <div class="container">
-            <div class="row bg-primary">
+            <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Us</h2>
                 </div>
             </div>
+        </div>
+    </section>
+    <section id="about-content" class="pt-0">
+        <div class="container">
             <div class="row justify-content-md-center text-center mt-5">
                 <div class="col-md-8">
                     <h4>Description</h4>
