--- a/_includes/press/files.html
+++ b/_includes/press/files.html
@@ -1,10 +1,24 @@
 
 <!-- Files Section -->
-    <section id="files">
-        <div class="container bg-primary">
+    <section id="files" class="mt-5 pt-4 pb-4 bg-primary">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="section-heading">Files</h1>
+                    <h2 class="section-heading">Files</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="files-content" class="pt-0">
+        <div class="container">
+            <div class="row justify-content-md-center text-center mt-5">
+                <div class="col-md-12">
+                    <h4>Company</h4>
+                </div>
+                <div class="col-md-4">
+                    <a href="/images/press/Hall1.png" download="mrbrian_image3">
+						<img src="/images/press/Hall1.png">
+					</a>
                 </div>
             </div>
         </div>
