--- a/_includes/press/games.html
+++ b/_includes/press/games.html
@@ -1,8 +1,8 @@
 
 <!-- games Section -->
-    <section id="games" class="pb-0">
+    <section id="games" class="pt-4 pb-4 bg-primary">
         <div class="container">
-            <div class="row bg-primary">
+            <div class="row">
                 <div class="col-lg-12 text-center">
                     <h1 class="section-heading">Games</h1>
                 </div>
