--- a/_includes/press/games/etereo.html
+++ b/_includes/press/games/etereo.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="section-heading">Mr Brian</h1>
+                    <h1 class="section-heading">Etereo</h1>
                 </div>
             </div>
         </div>
