--- a/_includes/team.html
+++ b/_includes/team.html
@@ -10,7 +10,9 @@
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
+                        {% if member.pic %}
                         <img src="/img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                        {% endif %}
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
