--- a/_includes/games.html
+++ b/_includes/games.html
@@ -7,9 +7,9 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-4 my-4 my-md-1">
                     <a href="https://piperift.itch.io/etereo">
-                        <h4 class="service-heading">Etereo</h4>
+                        <h3 class="service-heading">Etereo</h3>
                         <img class="responsive my-3" src="/img/games/etereo.png">
                         <h6>The evil spreads through the woods</h6>
                         <p class="text-muted">
@@ -21,9 +21,9 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 my-4 my-md-1">
                     <a href="https://piperift.itch.io/before-you-die">
-                        <h4 class="service-heading">Before You Die</h4>
+                        <h3 class="service-heading">Before You Die</h3>
                         <img class="responsive my-3" src="/img/games/before-you-die.jpg">
                         <h6>Survive the Dreams</h6>
                         <p class="text-muted">
@@ -35,9 +35,9 @@
                         </p>
                     </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 my-4 my-md-1">
                     <a href="/press">
-                        <h4 class="service-heading">Mr Brian</h4>
+                        <h3 class="service-heading">Mr Brian</h3>
                         <img class="responsive my-3" src="/img/games/mr-brian.png">
                         <p>
                                 <i>Ethics is about being aware of what we are.</i> <b>(Albert Jacquard)</b>
